--- a/package.json
+++ b/package.json
@@ -1,34 +1,111 @@
-{
-  "name": "chat-app-realtime",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "appwrite": "^13.0.0",
-    "firebase": "^10.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
-    "daisyui": "^3.9.2",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "gh-pages": "^6.0.0",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
-  }
-}
+# Chat App Realtime
+
+![App Screenshot](image1.png)
+
+## Overview
+
+Chat App Realtime is a modern real-time chat application built with React, Firebase, and Appwrite. It allows users to engage in instant messaging, making communication fast and easy.
+
+![Chat Interface](image2.png)
+
+## Features
+
+- Real-time chat: Communicate instantly with friends and family.
+- User authentication: Securely register and log in to your account.
+- User-friendly interface: Intuitive design for a seamless chatting experience.
+
+![Authentication](image3.png)
+
+## Getting Started
+
+To get this project up and running, follow these steps:
+
+1. Clone this repository:
+
+   ```sh
+   git clone https://github.com/yourusername/chat-app-realtime.git
+2.Install dependencies:
+
+  cd chat-app-realtime
+  npm install
+
+3.Start the development server:
+
+  npm run dev
+
+4.Open your web browser and navigate to http://localhost:3000 to access the chat app.
+
+**Technologies Used**
+
+React
+Firebase
+Appwrite
+React Router
+Vite
+Tailwind CSS
+DaisyUI
+
+**
+Certainly! You can use the following content and format it into a README.md file:
+
+markdown
+Copy code
+# Chat App Realtime
+
+![App Screenshot](image1.png)
+
+## Overview
+
+Chat App Realtime is a modern real-time chat application built with React, Firebase, and Appwrite. It allows users to engage in instant messaging, making communication fast and easy.
+
+![Chat Interface](image2.png)
+
+## Features
+
+- Real-time chat: Communicate instantly with friends and family.
+- User authentication: Securely register and log in to your account.
+- User-friendly interface: Intuitive design for a seamless chatting experience.
+
+![Authentication](image3.png)
+
+## Getting Started
+
+To get this project up and running, follow these steps:
+
+1. Clone this repository:
+
+   ```sh
+   git clone https://github.com/yourusername/chat-app-realtime.git
+Install dependencies:
+
+sh
+Copy code
+cd chat-app-realtime
+npm install
+Start the development server:
+
+sh
+Copy code
+npm run dev
+Open your web browser and navigate to http://localhost:5173 to access the chat app.
+
+.Technologies Used
+.React
+.Firebase
+.Appwrite
+.React Router
+.Vite
+.Tailwind CSS
+.DaisyUI
+
+
+**Contributing**
+
+We welcome contributions to make this project even better! Feel free to create issues, submit pull requests, or provide suggestions for improvement.
+
+**License**
+
+This project is open-source and available under the MIT License.
+
+![image1](./src/assets/image1.png)
+![image2](./src/assets/image2.png)
